--- a/frontend/src/assets/styles/cmps/dynamicModal/InviteModal.scss
+++ b/frontend/src/assets/styles/cmps/dynamicModal/InviteModal.scss
@@ -28,9 +28,25 @@
       padding-inline: 0 !important;
     }
     ul {
+      &::-webkit-scrollbar-track {
+          background-color: transparent;
+          opacity: 0;
+        }
+      
+        &::-webkit-scrollbar {
+          width: 6px;
+          height: 10px;
+          background-color: transparent;
+        }
+      
+        &::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          background-color: #c3c6d4;
+        }
       padding: 0;
       height: em(300px);
-      overflow-y: scroll;
+      overflow-y: auto;
+      overflow-x: hidden;
       .no-members{
         min-height: 36px;
         min-width: 466px;
