--- a/frontend/src/assets/styles/cmps/dynamicModal/_MeneuModal.scss
+++ b/frontend/src/assets/styles/cmps/dynamicModal/_MeneuModal.scss
@@ -246,10 +246,24 @@
 				}
 
 				.content {
+					overflow-x: hidden;
 					overflow-y: auto;
 					max-height: 188px;
 					gap: 6px;
 					width: 100%;
+					&::-webkit-scrollbar-track {
+						background-color: transparent;
+						opacity: 0;
+					}
+					&::-webkit-scrollbar {
+						width: 6px;
+						height: 10px;
+						background-color: transparent;
+					}
+					&::-webkit-scrollbar-thumb {
+						border-radius: 10px;
+						background-color: #c3c6d4;
+					}
 				}
 				.filter-col {
 					width: 100%;
